# kaos-nlp-transformers

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  pyproject.toml
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  scorecard.yml  security-full.yml  security-light.yml  security.yml  test.yml
benches/: bench_embedding.rs
docs/: BOUNDARY_REVIEW_KAOS_CONTENT.md  MIGRATION_0_2_0.md  functionality-review.md
docs/benchmarks/: extractive-ranker-throughput-edgar_agreements-centroid-k10-div0.json  extractive-ranker-throughput-edgar_agreements-query-k10-div0.json  extractive-ranker-throughput-edgar_agreements-query-k10-div5.json  extractive-ranker-throughput-usc-centroid-k20-div0.json  gliner-quality-cuad.json  gliner-throughput-edgar.json  gliner-throughput-usc.json  nli-quality-cuad.json  nli-throughput-edgar.json  nli-throughput-usc.json  pii-quality-cuad.json  pii-throughput-edgar.json  pii-throughput-usc.json  semantic-chunker-scale-edgar.json  semantic-chunker-scale-patents.json  semantic-chunker-scale-usc.json  semantic-chunker-throughput-edgar_agreements-n10.json  semantic-chunker-throughput-edgar_agreements-n100.json  semantic-chunker-throughput-patents-n100.json  semantic-chunker-throughput-usc-n100.json
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_nlp_transformers/: __init__.py  _rust.pyi  _version.py  chunking.py  cli.py  device.py  embedding.py  errors.py  extraction.py  models.py  ner.py  nli.py  pii.py  reranker.py  retrieval.py  serve.py  settings.py  tools.py
kaos_nlp_transformers/_rust/: __init__.pyi  embedding.pyi  registry.pyi  reranker.pyi  tokenize.pyi
kaos_nlp_transformers/_vendor/: README.md
kaos_nlp_transformers/_vendor/potion-base-8M/: ATTRIBUTION.txt
kaos_nlp_transformers/clustering/: __init__.py  semantic_dedup.py
rust/: lib.rs
rust/bindings/: embedding.rs  mod.rs  ner.rs  nli.rs  registry.rs  reranker.rs  token_classify.rs  tokenize.rs  util.rs
rust/core/: backend.rs  device.rs  error.rs  mod.rs  model_loader.rs  model_registry.rs  ner.rs  nli.rs  ort_runtime.rs  pooling.rs  reranker.rs  token_classify.rs  tokenize.rs
scripts/: freeze_reference_vectors.py
tests/: bench_extraction.py  bench_semantic_chunker.py
tests/integration/: test_embed_gpu.py  test_embed_live.py  test_embed_model2vec.py  test_ner_live.py  test_nli_live.py  test_pii_live.py  test_reranker_live.py  test_semantic_dedup.py  test_tools_phase8_live.py
tests/reference/: baai_bge_reranker_base.npy  baai_bge_small_en_v1_5.npy  minishlab_potion_base_32m.npy  minishlab_potion_base_8m.npy  minishlab_potion_retrieval_32m.npy  sentences.txt
tests/scale/: conftest.py  test_ner_quality_cuad.py  test_ner_scale.py  test_nli_quality_cuad.py  test_nli_scale.py  test_pii_quality_cuad.py  test_pii_scale.py  test_semantic_chunker_scale.py
tests/unit/: conftest.py  test_audit_01.py  test_audit_02.py  test_audit_03.py  test_audit_07.py  test_chunking_semantic.py  test_cli_prefetch.py  test_device.py  test_embedding_backends.py  test_extraction.py  test_models.py  test_ner.py  test_nli.py  test_pii.py  test_reference_vectors.py  test_retrieval.py  test_rust_extension.py  test_settings.py  test_tools.py  test_tools_phase8.py
