[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kaos-nlp-transformers"
dynamic = ["version"]
description = "Dense embeddings and small-model inference for the Kelvin Agentic OS — fastembed (ONNX) + model2vec (static numpy) backends, optional GPU / OpenVINO acceleration, no torch dependency"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "embeddings",
  "fastembed",
  "onnx",
  "model2vec",
  "retrieval",
  "reranker",
  "agentic",
  "mcp",
  "kaos",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "kaos-core>=0.1.0a1",
  "kaos-content>=0.1.0a1",
  "kaos-nlp-core>=0.1.0a1",
  "numpy>=2.1",
  "fastembed>=0.6",
]

[project.optional-dependencies]
# scipy gates SemanticDedupLevel (audit-01 KNT-002). The base install
# does not require scipy; only consumers of the dedup level pull it in.
clustering = ["scipy>=1.14.1"]
# Audit-06 KNT-501: ``[torch]`` is a deprecated no-op alias as of
# 0.1.0a6. The package previously gated GPU embedding (via
# sentence-transformers) and cross-encoder reranking on this extra,
# pulling ~1.4 GB of torch + transformers + sentence-transformers into
# the install. The migration to fastembed.TextCrossEncoder + ONNX-Runtime
# providers (CPU + ``[gpu]`` for CUDA via onnxruntime-gpu) means torch
# is no longer required for any in-tree code path. This empty alias
# keeps ``pip install kaos-nlp-transformers[torch]`` resolvable for one
# release cycle so existing CI / lockfiles don't error out; the alias
# is removed in 0.3.0. New code should use ``[gpu]`` for GPU
# acceleration. See CHANGELOG.md for the migration guide.
torch = []
# ONNX Runtime GPU — NVIDIA CUDA acceleration for fastembed AND the
# cross-encoder reranker (post-audit-06 KNT-501).
# NOTE: onnxruntime-gpu conflicts with onnxruntime; install one or the other.
gpu = ["onnxruntime-gpu>=1.19"]
# Intel OpenVINO acceleration (CPU and Intel GPU).
openvino = ["optimum[openvino]>=1.20"]
# model2vec — pure-numpy static embeddings (~500x CPU speedup, no torch).
# Pulls in numpy + tokenizers + safetensors + a few small libs (joblib,
# rich, jinja2, tqdm, setuptools); no torch, no scipy, no onnxruntime
# beyond what the base install already has.
#
# Audit-05 KNT-401: the wheel itself ships
# minishlab/potion-base-8M (~31 MB safetensors + tokenizer) under
# kaos_nlp_transformers/_vendor/potion-base-8M/. The loader checks
# the vendored path before snapshot_download, so this single model
# works offline / air-gapped out of the box once the [model2vec]
# extra is installed. Other model2vec models still download on
# first use. Bundling expands the wheel from ~2 MB to ~33 MB; this
# is a deliberate trade for offline-first deployments. If wheel size
# becomes a complaint we'll extract the vendored model to a companion
# package (kaos-nlp-transformers-static-models) per the spaCy
# /en_core_web_sm pattern.
model2vec = ["model2vec>=0.8.1"]
mcp = ["kaos-mcp>=0.1.0a1"]

[project.scripts]
kaos-nlp-transformers = "kaos_nlp_transformers.cli:main"
kaos-nlp-transformers-serve = "kaos_nlp_transformers.serve:main"

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-nlp-transformers"
Issues = "https://github.com/273v/kaos-nlp-transformers/issues"
Changelog = "https://github.com/273v/kaos-nlp-transformers/blob/main/CHANGELOG.md"

[dependency-groups]
# Cross-package dev baseline matches kaos-graph 0.1.0a2 / kaos-tabular 0.1.0a1:
# pytest 9, pytest-asyncio 1.3, pytest-cov 7.1, ty 0.0.34.
#
# kaos-mcp is in dev (not just declared as the [mcp] extra) because
# tests/unit/test_serve.py needs to exercise the lazy ``from kaos_mcp
# import KaosMCPServer, KaosMCPSettings`` path inside serve.main(),
# AND the missing-kaos-mcp install-hint path via monkeypatched
# sys.modules. Mirrors kaos-nlp-core's dev-group pattern.
#
# zstandard is in dev because the prep-fixture scripts (kept in this
# repo for reproducibility — they regenerate test fixtures from NAS)
# write zstd-compressed artifacts. Not a runtime dep of the package.
dev = [
  "kaos-mcp>=0.1.0a1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
]

[tool.hatch.version]
path = "kaos_nlp_transformers/_version.py"

[tool.hatch.build.targets.sdist]
# Sdist excludes /tests and CLAUDE.md. CLAUDE.md references monorepo-only
# checklists; integration tests need network/GPU/cache fixtures. Source code,
# license, changelog, and packaging metadata are enough for source-build
# verification on PyPI.
include = [
  "/kaos_nlp_transformers",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/NOTICE",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["kaos_nlp_transformers"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "unit: focused unit checks",
  "integration: end-to-end checks (real model downloads, GPU)",
  "live: requires live network access (HuggingFace Hub model fetch)",
  "gpu: requires CUDA / Apple Silicon / OpenVINO accelerator",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_nlp_transformers"]

[tool.ty.src]
include = ["kaos_nlp_transformers", "tests"]

[tool.uv]
package = true
