[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "kaos-nlp-transformers"
# Single source of truth: Cargo.toml [package].version. Maturin reads
# Cargo SemVer (e.g. "0.2.0-alpha.1") and emits PEP 440-normalized
# wheel metadata (e.g. "0.2.0a1"). Avoids dual-source drift; mirrors
# the kaos-nlp-core decision documented in
# docs/MIGRATION_0_2_0.md §6.
dynamic = ["version"]
description = "Dense embeddings and small-model inference for the Kelvin Agentic OS — Rust-native ONNX backend, model2vec static lookup, optional GPU"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "embeddings",
  "ort",
  "onnx",
  "model2vec",
  "retrieval",
  "reranker",
  "agentic",
  "mcp",
  "kaos",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "kaos-core>=0.1.0rc1,<0.2",
  # 0.1.0a5 introduced kaos_nlp_core.{chunking,similarity} + the
  # _rust.chunking.semantic_pack kernel that SemanticChunker calls.
  # (The 0.1.0a4 tag exists but its release run failed at the wheels
  # matrix and never published to PyPI; 0.1.0a5 is the first PyPI
  # build containing the new modules.)
  "kaos-nlp-core>=0.1.0rc1,<0.2",
  "numpy>=2.1",
  # Audit KNT-601 (0.2.0): fastembed removed. Embedding inference now
  # goes through the in-tree Rust cdylib (``_rust.embedding``) which
  # calls libonnxruntime via the ``ort`` Rust crate. The cdylib is
  # built by maturin from the Cargo.toml at the repo root; nothing in
  # this list reflects it because it's bundled in the wheel itself.
  #
  # KNT-602 Option A (0.2.0a3): kaos-content was REMOVED from base
  # deps. The SemanticDedupLevel impl + dedup MCP tool moved to
  # kaos-content. This package no longer imports kaos_content from
  # any source path (test_audit_07.py pins this regression).
  #
  # huggingface_hub stays an explicit base dep because the model2vec
  # loader (the static-embedding code path) calls snapshot_download
  # directly. Pre-KNT-601 it was transitive via fastembed.
  "huggingface_hub>=0.26",
]

[project.optional-dependencies]
# KNT-602 Option A (0.2.0a3): the [clustering] extra (scipy +
# SemanticDedupLevel) moved to kaos-content. Use
# `pip install kaos-content[clustering]` to pick up the new home.
# This package no longer ships a clustering surface — only the
# embedding / reranker / device primitives.
# Audit-06 KNT-501: ``[torch]`` is a deprecated no-op alias as of
# 0.1.0a6. Audit KNT-601 (0.2.0): scheduled for removal in 0.3.0; one
# more release cycle of compatibility-resolution.
torch = []
# Audit KNT-601 (0.2.0): post-migration, [gpu] becomes a
# distribution-pin extra. The 0.2.0a1 release ships CPU only; the
# 0.2.0a2 release introduces a `kaos-nlp-transformers-gpu` companion
# wheel built with `cargo build --features gpu` (ort/cuda EP). Until
# then, [gpu] is a no-op alias.
gpu = []
# Audit KNT-601 (0.2.0): same shape as [gpu] — [openvino] becomes a
# distribution-pin extra in 0.2.0a2. No-op alias today.
openvino = []
# model2vec — pure-numpy static embeddings (~500x CPU speedup, no
# torch). Pulls numpy + tokenizers + safetensors + a few small libs;
# no torch, no scipy, no onnxruntime beyond what the base install
# already has.
#
# Audit-05 KNT-401: the wheel itself ships
# minishlab/potion-base-8M (~31 MB safetensors + tokenizer) under
# kaos_nlp_transformers/_vendor/potion-base-8M/. The loader checks
# the vendored path before snapshot_download, so this single model
# works offline / air-gapped out of the box once the [model2vec]
# extra is installed. The vendored copy is preserved in 0.2.0 — see
# docs/MIGRATION_0_2_0.md §11.
model2vec = ["model2vec>=0.8.1"]
mcp = ["kaos-mcp>=0.1.0a1"]

[project.scripts]
kaos-nlp-transformers = "kaos_nlp_transformers.cli:main"
kaos-nlp-transformers-serve = "kaos_nlp_transformers.serve:main"

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-nlp-transformers"
Issues = "https://github.com/273v/kaos-nlp-transformers/issues"
Changelog = "https://github.com/273v/kaos-nlp-transformers/blob/main/CHANGELOG.md"

[dependency-groups]
# Cross-package dev baseline matches kaos-graph 0.1.0a2 / kaos-tabular 0.1.0a1.
#
# kaos-mcp is in dev (not just declared as the [mcp] extra) because
# tests/unit/test_serve.py needs to exercise the lazy ``from kaos_mcp
# import KaosMCPServer, KaosMCPSettings`` path inside serve.main(),
# AND the missing-kaos-mcp install-hint path via monkeypatched
# sys.modules. Mirrors kaos-nlp-core's dev-group pattern.
#
# maturin lives here so CI's `uv run maturin develop` step works
# (per F009 lesson #2; build-system requires path is build-time only).
# pytest-benchmark is added for the perf-smoke gate (P5).
dev = [
  "kaos-mcp>=0.1.0a1",
  "maturin>=1.8,<2.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
]

[tool.maturin]
# Package lives at repo root (kaos_nlp_transformers/) — not under
# python/ like kaos-nlp-core. Avoids 48 tests' import-path churn.
python-source = "."
module-name = "kaos_nlp_transformers._rust"
# Mirror Cargo.toml's pyo3 feature list. Per F009 lesson #1.
features = ["pyo3/extension-module", "pyo3/abi3-py313"]
# Vendored model2vec model + license docs in BOTH sdist AND wheel.
# Distinct from kaos-nlp-core's pattern which `include_bytes!`-bakes
# data into _rust.abi3.so; here we want _vendor/ as loose files
# because the model2vec loader (Python-side) calls
# StaticModel.from_pretrained(dir_path). See
# docs/MIGRATION_0_2_0.md §11.
include = [
  { path = "kaos_nlp_transformers/_vendor/**", format = "sdist" },
  { path = "kaos_nlp_transformers/_vendor/**", format = "wheel" },
  { path = "LICENSE", format = "sdist" },
  { path = "NOTICE", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
  { path = "SECURITY.md", format = "sdist" },
]
# Keep build/scratch artifacts out of the sdist.
exclude = [
  { path = "target/**", format = "sdist" },
  { path = "target/**", format = "wheel" },
  { path = ".pytest_cache/**", format = "sdist" },
  { path = ".venv/**", format = "sdist" },
  # Frozen reference NPYs are test-only. Phase 5 ships them in sdist
  # but not the runtime wheel.
  { path = "tests/reference/**", format = "wheel" },
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "unit: focused unit checks",
  "integration: end-to-end checks (real model downloads, GPU)",
  "live: requires live network access (HuggingFace Hub model fetch)",
  "gpu: requires CUDA / Apple Silicon / OpenVINO accelerator",
  "slow: long-running smoke tests (perf gates, large embeddings)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_nlp_transformers"]

[tool.ty.src]
include = ["kaos_nlp_transformers", "tests"]

[tool.uv]
package = true
exclude-newer = "72 hours"
[tool.uv.exclude-newer-package]
"kaos-citations" = false
"kaos-content" = false
"kaos-core" = false
"kaos-graph" = false
"kaos-llm-client" = false
"kaos-llm-core" = false
"kaos-mcp" = false
"kaos-ml-core" = false
"kaos-names" = false
"kaos-nlp-core" = false
"kaos-nlp-transformers" = false
"kaos-office" = false
"kaos-pdf" = false
"kaos-source" = false
"kaos-tabular" = false
"kaos-web" = false
